remove hardcoded redirect uri
